--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,78 +12,55 @@
 
 <body>
     <nav class="navbar" role="navigation" aria-label="main navigation">
-        <div class="navbar-brand">
-            <a class="navbar-item" href="https://bulma.io">
-                <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
-            </a>
-
-            <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-            </a>
-        </div>
-
-        <div id="navbarBasicExample" class="navbar-menu">
-            <div class="navbar-start">
-                <a class="navbar-item">
-                    Home
+        <div class="container">
+            <div class="navbar-brand">
+                <a class="navbar-item" href="<%= root_path %>">
+                    <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
                 </a>
 
-                <a class="navbar-item">
-                    Documentation
+                <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
                 </a>
-
-                <div class="navbar-item has-dropdown is-hoverable">
-                    <a class="navbar-link">
-                        More
-                    </a>
-
-                    <div class="navbar-dropdown">
-                        <a class="navbar-item">
-                            About
-                        </a>
-                        <a class="navbar-item">
-                            Jobs
-                        </a>
-                        <a class="navbar-item">
-                            Contact
-                        </a>
-                        <hr class="navbar-divider">
-                        <a class="navbar-item">
-                            Report an issue
-                        </a>
-                    </div>
-                </div>
             </div>
-             <div class="navbar-end">
-            <% if current_user.nil? %>
-           
-                <div class="navbar-item">
-                    <div class="buttons">
-                        <a href="<%= new_user_path %>" class="button is-primary">
-                            <strong>Sign up</strong>
-                        </a>
-                        <a href="<%= login_path %>" class="button is-light">
-                            Log in
-                        </a>
-                    </div>
-                </div>
-            
-            <% else %>
-                <div class="navbar-item has-dropdown is-hoverable">
-                    <a class="navbar-link">
-                        User
+
+            <div id="navbarBasicExample" class="navbar-menu">
+                <div class="navbar-start">
+                    <a href="<%= home_path %>" class="navbar-item">
+                        Home
                     </a>
-                    <div class="navbar-dropdown">
-                        <a href="<%= logout_path %>" data-method="delete">Logout</a>
-                    </div>
+                    
                 </div>
-            <% end %>
+                <div class="navbar-end">
+                    <% if current_user.nil? %>
+
+                    <div class="navbar-item">
+                        <div class="buttons">
+                            <a href="<%= new_user_path %>" class="button is-primary">
+                                <strong>Sign up</strong>
+                            </a>
+                            <a href="<%= login_path %>" class="button is-light">
+                                Log in
+                            </a>
+                        </div>
+                    </div>
+
+                    <% else %>
+                    <div class="navbar-item has-dropdown is-hoverable">
+                        <a class="navbar-link">
+                            User
+                        </a>
+                        <div class="navbar-dropdown">
+                            <a href="<%= logout_path %>" data-method="delete">Logout</a>
+                        </div>
+                    </div>
+                    <% end %>
+                </div>
             </div>
         </div>
     </nav>
-    <main class="container">
+    <main>
         <%= yield %>
     </main>
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
