--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
                     <% else %>
                     <div class="navbar-item has-dropdown is-hoverable">
                         <a class="navbar-link">
-                            User
+                            <%= current_user.name %>
                         </a>
                         <div class="navbar-dropdown">
                             <a href="<%= logout_path %>" data-method="delete">Logout</a>
